Name:                cvutils
Version:             0.1
Description:         opencv utility functions
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version:       >= 1.8

Library 
   Exposed-modules:     Edge, CVUtils
   Build-depends:       base>=4, syb, mtl>2, parsec>=3, 
                        random, unix, directory, process,containers,bytestring,binary,
                        gnewplot, hmatrix, storablevector, Codec-Image-DevIL, 
                        array, storable-tuple, probably>0.1, vector, baysig>0.0.1, OpenGL<2.4, 
                        GLUT, bitarray

Executable mix 
--   Hs-source-dirs:   prog
   Main-Is:          Mix.hs
   ghc-options:      -O2 -threaded
--   other-modules:    EvalM
   Build-depends:       base>=4, syb, mtl>2, parsec>=3, 
                        random, unix, directory, process,containers,bytestring,binary,
                        gnewplot, hmatrix, storablevector, Codec-Image-DevIL, 
                        array, storable-tuple, probably>0.1

Executable track
--   Hs-source-dirs:   prog
   Main-Is:          Track.hs
   ghc-options:      -O2 -threaded
--   other-modules:    EvalM
   ghc-prof-options:    -auto-all
   Build-depends:       base>=4, syb, mtl>2, parsec>=3, 
                        random, unix, directory, process,containers,bytestring,binary,
                        gnewplot, hmatrix, storablevector, Codec-Image-DevIL, 
                        array, storable-tuple, probably>0.1, baysig>0.0.1,  OpenGL<2.4, vector, 
                        GLUT, bitarray
